--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="Flèche gauche">
 		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="Flèche droite">
 		<div class="dots">
+			<!-- <div class="dot"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
+			<div class="dot"></div> -->
 		</div>
 	</div>
 
